...
        >
		<FrameLayout
			android:id="@+id/networkingOrLocalModeGroup"
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size">
			<ImageView
				android:id="@+id/localModeIV"
				android:layout_width="@dimen/button_size"
				android:layout_height="@dimen/button_size"
				android:padding="@dimen/button_padding"
				android:src="@drawable/ic_sound"
				android:scaleType="fitXY"
				android:background="@color/gray7F"
...
			<FrameLayout
				android:id="@+id/networkingModeGroup"
				android:layout_width="@dimen/button_size"
				android:layout_height="@dimen/button_size"
				>
				<ImageView
					android:id="@+id/wifiOkIV"
					android:layout_width="@dimen/button_size"
					android:layout_height="@dimen/button_size"
					android:padding="@dimen/button_padding"
					android:src="@drawable/ic_wifi_ok"
					android:scaleType="fitXY"
					android:background="@color/gray7F"
					android:visibility="gone"
					app:tint="?attr/colorPrimary"
					/>

				<ImageView
					android:id="@+id/wifiNoIV"
					android:layout_width="@dimen/button_size"
					android:layout_height="@dimen/button_size"
					android:padding="@dimen/button_padding"
					android:src="@drawable/ic_wifi_ok"
					android:scaleType="fitXY"
					android:background="@color/gray7F"
...
					android:layout_height="@dimen/button_size"
					android:paddingStart="@dimen/wifi_receiver_count_padding"
					android:paddingTop="@dimen/wifi_receiver_count_padding"
					android:background="@android:color/transparent"
					>
					<TextView
						android:id="@+id/wifiReceiverCount"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:background="@android:color/transparent"
						android:textColor="?colorOnPrimary"
						android:gravity="center"
						android:textStyle="bold"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray7F"
            />
        
        <ImageButton
            android:id="@+id/rewBtn"
            android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:padding="@dimen/button_padding"
        	android:src="@drawable/ic_rew"
        	android:scaleType="fitXY"
        	android:background="@color/gray7F"
...
            />

		<FrameLayout
			android:layout_width="@dimen/button_size"
			android:layout_height="@dimen/button_size">
			<ImageButton
				android:id="@+id/playBtn"
				android:layout_width="@dimen/button_size"
				android:layout_height="@dimen/button_size"
				android:padding="@dimen/button_padding"
				android:src="@drawable/ic_play"
				android:scaleType="fitXY"
				android:background="@color/gray7F"
				app:tint="?attr/colorPrimary"
				/>

			<ImageButton
				android:id="@+id/pauseBtn"
				android:layout_width="@dimen/button_size"
				android:layout_height="@dimen/button_size"
				android:padding="@dimen/button_padding"
				android:src="@drawable/ic_pause"
				android:scaleType="fitXY"
				android:visibility="gone"
				android:background="@color/gray7F"
				app:tint="?attr/colorPrimary"
				/>
		</FrameLayout>
        
        <ImageButton
            android:id="@+id/fwdBtn"
            android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:padding="@dimen/button_padding"
        	android:src="@drawable/ic_fwd"
        	android:scaleType="fitXY"
        	android:background="@color/gray7F"
...
