<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicSelectorRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>